# ArchiTexture

./: .gitignore  CITATION.cff  CODEX_SERVER_HANDOFF.md  LICENSE  PAPER_REPRODUCIBILITY.md  RANKING_EXPLANATION.txt  README.md  SERVER_MIGRATION.md  SERVER_NON_ADE20K_SCOPE.md  SERVER_START_HERE.md  config.yaml  pyproject.toml  requirements.txt
appendix_assets/: README.md
checkpoints_manifest/: README.md
data_docs/: README.md
docs/: README.md  index.html
paper/: README.md  UPDATED_SOURCES_USED.md  abstract.tex  appendix.tex  main.bbl  main.tex  neurips_2023.sty  refs.bib
paper_repro/: README.md  table_manifest.json
progress/: datasets_progress.jsonl  datasets_progress_latest.md  last_notice.txt
reproducibility/: README.md  REPRODUCE_APPENDIX.md  REPRODUCE_MAIN_RESULTS.md
results/: EXPERIMENT_LEDGER.md  FINAL_SUBMISSION_RESULTS.md  README.md  RESULTS_MANIFEST.md  UPDATED_SOURCES_USED.md
rwtd_miner/: __init__.py  cli.py
scripts/: bootstrap_and_run.sh  bootstrap_env.sh  build_appendix_assets.py  build_caid_audit_figure.py  build_caid_binary_benchmark.py  build_controlnet_audit_figure.py  build_controlnet_bridge_figure.py  build_descriptor_ablation.py  build_detexture_audit_figure.py  build_feature_summary_figure.py  build_khan_synthetic_benchmark.py  build_learned_single_selector.py  build_neurips_explanatory_figures.py  build_pages_bundle.py  build_prompt_union_masks.py  build_promptstyle_multibank.py  build_proposal_bank_baselines.py  build_rwtd_generic_bank_baselines.py  build_rwtd_oracle_figure.py  build_rwtd_paired_bootstrap.py  codex_resume.sh  (+27 more)
(+137 files in other folders)
